--- a/android/app/src/main/res/layout/activity_cek_hitung.xml
+++ b/android/app/src/main/res/layout/activity_cek_hitung.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.NgitungActivity.CekHitung"
+    tools:context=".Activity.Koor.RutePengirimanActivity.CekHitungActivity"
     android:orientation="vertical">
 
     <include
