--- a/android/app/src/main/res/layout/activity_navigasi_kurir.xml
+++ b/android/app/src/main/res/layout/activity_navigasi_kurir.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.KurirActivity.NavigasiKurirActivity">
+    tools:context=".Activity.Kurir.NavigasiKurirActivity">
 
     <com.mapbox.navigation.ui.maneuver.view.MapboxManeuverView
         android:id="@+id/maneuverView"
