--- a/android/app/src/main/res/layout/activity_pick_lokasi.xml
+++ b/android/app/src/main/res/layout/activity_pick_lokasi.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-    tools:context=".Activity.PengirimanActivity.PickLokasiActivity"
+    tools:context=".Activity.Koor.AturPengiriman.PickLokasiActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
