--- a/android/app/src/main/res/layout/activity_rute_pengiriman.xml
+++ b/android/app/src/main/res/layout/activity_rute_pengiriman.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Koor.RutePengirimanActivity.RutePengirimanActivity">
+    tools:context=".Activity.Koor.RutePengiriman.RutePengirimanActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
