--- a/android/app/src/main/res/layout/activity_tabel_hitung.xml
+++ b/android/app/src/main/res/layout/activity_tabel_hitung.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.Koor.RutePengirimanActivity.TabelHitungActivity">
+    tools:context=".Activity.Koor.RutePengiriman.TabelHitungActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutTable"
