--- a/android/app/src/main/res/layout/activity_turn_by_turn_experience.xml
+++ b/android/app/src/main/res/layout/activity_turn_by_turn_experience.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.KurirActivity.TurnByTurnExperienceActivity">
+    tools:context=".Activity.Kurir.TurnByTurnExperienceActivity">
 
     <com.mapbox.maps.MapView
         android:id="@+id/mapView"
