--- a/android/app/src/main/res/layout/activity_ubah_data_pengiriman.xml
+++ b/android/app/src/main/res/layout/activity_ubah_data_pengiriman.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".Activity.PengirimanActivity.UbahDataPengiriman">
+    tools:context=".Activity.Koor.AturPengiriman.UbahDataPengiriman">
 
     <TextView
         android:layout_width="wrap_content"
